tests/compile-fail/generics_nyi.stderr
error: Generic functions are not supported yet
 --> tests/compile-fail/generics_nyi.rs:6:18
  |
6 | fn generic_plugin<T>(_: &mut App) {
  |                  ^^^

warning: unused import: `bevy::prelude::*`
 --> tests/compile-fail/generics_nyi.rs:3:5
  |
3 | use bevy::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile-fail/generics_nyi.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/generics_nyi.rs`
